# AI-Cloud

./: README.md
Sense/01_face_detect_landmark/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face_detect_landmark  face_detect_landmark.cpp
Sense/02_face_analyze/: build.sh
Sense/common/include/: common.h
Sense/doc/: Sense_AI-rest_api.xlsx
baidu/01_face_detect/: CMakeLists.txt
baidu/01_face_detect/src/: main.cpp
baidu/02_face_add/: CMakeLists.txt  build.sh  main.cpp
baidu/03_face_update/: CMakeLists.txt  build.sh  main.cpp
baidu/04_face_delete/: CMakeLists.txt  main.cpp
baidu/05_user_info/: CMakeLists.txt  build.sh  main.cpp
baidu/06_user_del/: CMakeLists.txt  build.sh  main.cpp
baidu/07_group_add/: CMakeLists.txt  build.sh  main.cpp
baidu/08_id_verification/: CMakeLists.txt  build.sh  main.cpp
baidu/common/: json_common.cpp
baidu/common/include/aip-cpp-sdk-0.7.0/: face.h
baidu/common/include/aip-cpp-sdk-0.7.0/base/: base.h  http.h
baidu/doc/: Baidu_AI-rest_api.xlsx
baidu/res/: 640.jpg.encode  test.jpg.encode
face++/01_face_detect_landmark/: face_detect_landmark.cpp
face++/02_face_analyze/: CMakeLists.txt  build.sh  face_analyze.cpp
face++/03_face_compare/: CMakeLists.txt  build.sh  face_compare.cpp
face++/04_HumanBody_Segment/: CMakeLists.txt  humanbody_segment.cpp
face++/05_HumanBody_detect/: CMakeLists.txt  build.sh  humanbody_detect.cpp
face++/common/include/: common.h
face++/doc/: Face++_AI-rest_api.xlsx
